--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,4 +48,12 @@ lint.ignore = [
     "RET501",  # unnecessary-return-none
 ]
 
+
 line-length = 100
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["ANN001", "ANN201", "S101", "ARG", "FBT", "D"]
+
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
