--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,36 @@
 [build-system]
-requires = ["setuptools"]
+requires = [
+    "setuptools==64",
+    "setuptools-scm==8.0"]
 build-backend = "setuptools.build_meta"
+
+# using setuptools_scm results in including all resource files tracked by git (e.g. mt-filter-list.annotated)
+[tool.setuptools_scm]
+version_file = "src/warc2text_runner/_version.py"
 
 [project]
 name = "warc2text-runner"
-version = "2.0.0"
+dynamic = ["version"]  # setuptools_scm will use the version received from git
+requires-python = ">= 3.10"
+
 dependencies = [
     "trafilatura==1.8.0",
     "lxml==5.1.1",
     "lxml-html-clean==0.1.0",
     "ujson==5.4.0",
     "zstandard==0.22.0",
-    'importlib-metadata; python_version>="3.10"',
-    "fire"
+    "fire",
+    "fasttext @ git+https://github.com/facebookresearch/fastText@1142dc4c4ecbc19cc16eee5cdd28472e689267e6"
 ]
 
 [tool.setuptools.packages.find]
-# All the following settings are optional:
 where = ["src"]  # ["."] by default
 
-[project.scripts]
-traf = "warc2text_runner.two.trafilatura.traf:main"
-
 [tool.setuptools]
-script-files = ["src/warc2text_runner/two/run_traf.sh", "src/warc2text_runner/two/run_stage2_local.sh","src/warc2text_runner/two/run_stage2_nodeparallel.sh"]
+script-files = [
+    "src/warc2text_runner/two/stage2traf.sh",
+    "src/warc2text_runner/two/stage2local.sh",
+    "src/warc2text_runner/two/stage2nodeparallel.sh",
+    "src/warc2text_runner/two/stage2download.sh"
+]
 
