--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,6 @@ script-files = [
     "src/warc2text_runner/stage1/run_warc2html_local.sh",
     "src/warc2text_runner/stage1/run_warc2html_remote.sh",
     "src/warc2text_runner/stage1/run_warc2html_task.sh",
-
-
+    "src/warc2text_runner/stage1/url-filter-list.optimised"
 ]
 
