stage2: dependencies updated

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "ujson==5.4.0",
     "zstandard==0.22.0",
     "fire",
+    "numpy==1.23.5",
     "fasttext @ git+https://github.com/facebookresearch/fastText@1142dc4c4ecbc19cc16eee5cdd28472e689267e6"
 ]
 
