--- a/two/requirements_LUMIextra.txt
+++ b/two/requirements_LUMIextra.txt
@@ -1,19 +1,21 @@
-Babel==2.15.0
-certifi==2024.2.2
-charset-normalizer==3.3.2
-courlan==1.1.0
-dateparser==1.2.0
+Babel==2.17.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+courlan==1.3.2
+dateparser==1.2.1
 fasttext @ git+https://github.com/facebookresearch/fastText@1142dc4c4ecbc19cc16eee5cdd28472e689267e6
-fire==0.6.0
-htmldate==1.8.1
-jusText==3.0.0
-lxml==5.1.1
+fire==0.7.0
+htmldate==1.9.3
+jusText==3.0.2
+lxml==5.3.1
 lxml_html_clean==0.1.0
-regex==2024.4.28
-termcolor==2.4.0
+python-dateutil==2.9.0.post0
+pytz==2025.1
+regex==2024.11.6
+termcolor==2.5.0
 tld==0.13
-trafilatura==1.8.0
-tzlocal==5.2
+trafilatura==2.0.0
+tzlocal==5.3.1
 ujson==5.4.0
-urllib3==2.2.1
+urllib3==2.3.0
 zstandard==0.22.0
